# rumpus

./: .gitignore  README.md  pyproject.toml  rumpshaker.py
src/: rumpshaker.py
